--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,4 +1,5 @@
 /*  ============= WEB BROWSER RESETS ============ */
+body { background-color: lightgreen; }
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
 html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
@@ -9,7 +10,15 @@ body { line-height: 1.5; min-height: 100vh }
 img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 
-/* ================= ENDS ================ */
+/* Desktops */
+@media (min-width: 768px) {
+    body { padding: 4% 20% }
+ }
+ 
+ /* Mobiles */
+ @media (max-width: 767px) {
+    body { padding: 8% 5% }
+ }
 
 body {
     text-align: center;
@@ -43,4 +52,5 @@ p {
     font-size: 20px;
     margin-bottom: 16px;
 }
+a { color: darkgreen; }
 
