--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -1,4 +1,5 @@
 /*  ============= WEB BROWSER RESETS ============ */
+body { background-color: purple; }
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
 html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
@@ -9,9 +10,18 @@ body { line-height: 1.5; min-height: 100vh }
 img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 
-/* ================= ENDS ================ */
-
+/* ====== PADDING AROUND WEB PAGE BODY CONTENT ======  */
+/* Desktops */
+@media (min-width: 768px) {
+    body { padding: 4% 20% }
+ }
+ 
+ /* Mobiles */
+ @media (max-width: 767px) {
+    body { padding: 8% 5% }
+ }
 h1 {
+    color: white;
     font-size: 84px;
     margin-bottom: 64px;
     text-align: center;
@@ -20,6 +30,7 @@ h1 {
 }
 
 h2 {
+    color: white;
     font-size: 28px;
     margin-bottom: 4px;
     margin-top: 54px;
@@ -27,8 +38,10 @@ h2 {
 }
 
 p {
+    color: white;
     font-size: 20px;
     font-family: sans-serif;
     line-height: 1.6;
     margin-bottom: 20px;
 }
+a { color: white; }
