--- a/exercises/assets/css/style-1.css
+++ b/exercises/assets/css/style-1.css
@@ -10,6 +10,9 @@ body { line-height: 1.5; min-height: 100vh }
 img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 
+/* TO centre the "back to home page tab" */
+
+
 /* ====== PADDING AROUND WEB PAGE BODY CONTENT ======  */
 /* Desktops */
 @media (min-width: 768px) {
