--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -1,5 +1,6 @@
 /*  ============= WEB BROWSER RESETS ============ */
-body { background-color: purple; }
+body
+ { background-color: purple; }
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
 html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
