--- a/exercises/assets/css/hero-image.css
+++ b/exercises/assets/css/hero-image.css
@@ -1,4 +1,5 @@
 /*  ============= WEB BROWSER RESETS ============ */
+/* Maheer Ahmad 73033 */
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
 html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
