--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -1,4 +1,5 @@
 /*  ============= WEB BROWSER RESETS ============ */
+/* Maheer Ahmad 73033 */
 body
  { background-color: purple; }
 * { margin: 0; padding: 0; border: none }
