--- a/exercises/assets/css/style-3.css
+++ b/exercises/assets/css/style-3.css
@@ -1,4 +1,5 @@
 /*  ============= WEB BROWSER RESETS ============ */
+/* Maheer Ahmad 73033 */
 body { background-color: lightblue; }
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
